Changed the view from dynamic to static, did some refactoring in view and updated the colors in each path cell.